--- a/FrontEnd/campus-management/package.json
+++ b/FrontEnd/campus-management/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "es6-promise": "^4.2.6",
     "vue": "^2.6.6",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.5.5"
+    "vue-wysiwyg": "^1.7.2",
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
