Authentication, Admins and Articles Controllers

--- a/BackEnd/CampusManagement.Api/appsettings.json
+++ b/BackEnd/CampusManagement.Api/appsettings.json
@@ -1,4 +1,18 @@
 {
+  "TokenOptions": {
+    "Audience": "CampusAudience",
+    "Issuer": "FII",
+    "AccessTokenExpiration": 6000,
+    "RefreshTokenExpiration": 12000
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-99S221B;Database=CampusManagementDb;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Site": "www.security.org",
+    "SigningKey": "Mihai este cel mai bun developer chiar daca multa lume nu stie asta",
+    "ExpiryInMinutes": "60"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
