--- a/FrontEnd/campus-management/package.json
+++ b/FrontEnd/campus-management/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "es6-promise": "^4.2.6",
     "vue": "^2.6.6",
+    "vue-axios": "^2.1.4",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
@@ -19,7 +20,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "@vue/cli-service": "^3.6.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
