FronEnd and BackEnd Factorization

--- a/BackEnd/CampusManagement.Api/appsettings.json
+++ b/BackEnd/CampusManagement.Api/appsettings.json
@@ -2,8 +2,11 @@
   "TokenOptions": {
     "Audience": "CampusAudience",
     "Issuer": "FII",
-    "AccessTokenExpiration": 6000,
-    "RefreshTokenExpiration": 12000
+    "AccessTokenExpiration": 60000,
+    "RefreshTokenExpiration": 1200
+  },
+  "DefaultValues": {
+    "ArticleDefaultImage": "Uploads/default_article.png"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-99S221B;Database=CampusManagementDb;Trusted_Connection=True;"
