--- a/FrontEnd/campus-management/package.json
+++ b/FrontEnd/campus-management/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "es6-promise": "^4.2.6",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
@@ -15,7 +16,8 @@
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
     "vuetify": "^1.5.5",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
