--- a/BackEnd/CampusManagement.Business/CampusManagement.Business.csproj
+++ b/BackEnd/CampusManagement.Business/CampusManagement.Business.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <Folder Include="Application\Validators\" />
     <Folder Include="Authentication\Validations\" />
+    <Folder Include="HostelStatus\Validations\" />
     <Folder Include="Hostel\Validators\" />
   </ItemGroup>
 
