--- a/BackEnd/CampusManagement.Api/appsettings.json
+++ b/BackEnd/CampusManagement.Api/appsettings.json
@@ -1,20 +1,12 @@
 {
-  "TokenOptions": {
-    "Audience": "CampusAudience",
-    "Issuer": "FII",
-    "AccessTokenExpiration": 60000,
-    "RefreshTokenExpiration": 1200
-  },
   "DefaultValues": {
     "ArticleDefaultImage": "Uploads/default_article.png"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-99S221B;Database=CampusManagementDb;Trusted_Connection=True;"
   },
-  "Jwt": {
-    "Site": "www.security.org",
-    "SigningKey": "Mihai este cel mai bun developer chiar daca multa lume nu stie asta",
-    "ExpiryInMinutes": "60"
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
   "Logging": {
     "LogLevel": {
