--- a/BackEnd/CampusManagement.Business/CampusManagement.Business.csproj
+++ b/BackEnd/CampusManagement.Business/CampusManagement.Business.csproj
@@ -30,6 +30,7 @@
     <Folder Include="Authentication\Validations\" />
     <Folder Include="HostelStatus\Validations\" />
     <Folder Include="Hostel\Validators\" />
+    <Folder Include="Stage\Validations\" />
   </ItemGroup>
 
 </Project>
