--- a/FrontEnd/campus-management/package.json
+++ b/FrontEnd/campus-management/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "es6-promise": "^4.2.6",
+    "jspdf": "^1.5.3",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
+    "vue-json-excel": "^0.2.98",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
