--- a/FrontEnd/campus-management/package.json
+++ b/FrontEnd/campus-management/package.json
@@ -8,18 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "alasql": "^0.4.11",
     "axios": "^0.19.0",
+    "convert-csv-to-json": "0.0.14",
+    "csvtojson": "^2.0.8",
     "es6-promise": "^4.2.6",
     "jspdf": "^1.5.3",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
+    "vue-json-csv": "^1.2.4",
     "vue-json-excel": "^0.2.98",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.0",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
